[package]
name = "detect_reorg_attack"
version = "0.1.0"
authors = ["Robb Shecter <robb@public.law>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.57"
itertools = "0.9.0"
num-format = "0.4.0"
